<resources>
    <string name="app_name">StockInquiry</string>
    <string name="enter_sku">Enter SKU</string>
    <string name="submit">Submit</string>
    <string name="scan">Scan</string>
    <string name="sku_not_entered">SKU not entered</string>
    <string name="action_settings">Settings</string>
    <string name="socket_ip">Socket IP</string>
    <string name="socket_port">Socket Port</string>
    <string name="store_id">Store ID</string>
    <string name="wsdl_server">WSDL Server</string>
    <string name="save">Save</string>
    <string name="or">OR</string>
    <string name="title_activity_display_stock_data">DisplayStockDataActivity</string>
    <string name="sku_label">SKU: </string>
    <string name="sku_desc_label">SKU Desc: </string>
    <string name="normal_price_label">Normal Price: </string>
    <string name="discounted_price_label">Discounted Price: </string>
    <string name="stock_details_label">Stock Details: </string>
    <string name="stock_info_unavailable">- Stock Information Not Available -</string>


</resources>
